CSS files and templates updated

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,29 +1,12 @@
 <html>
     <head>
-        <title>My scratchboard page</title>
+        <title>Chronic</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
     </head>
 
     <body>
 
-        <div>
-            This is the first dummy comment.
-        </div>
-
-        <div>
-            This is the the second dummy comment.  It's no more interesting
-            than the first.
-        </div>
-
-        <div>
-            This is the third dummy comment.  It's actually quite exciting!
-        </div>
-
-        <div>
-            <form action="." method="POST">
-                <textarea name="contents" placeholder="Enter a comment"></textarea>
-                <input type="submit" value="Post comment">
-            </form>
-        </div>
+        <h1 id="home">Chronic</h1>
 
     </body>
 </html>
